# EarthquakeAnalysis

./: .gitignore  AGENTS.md  Makefile  README.en.md  README.md  pyproject.toml
.cursor/rules/: data-modeling.mdc  project-core.mdc  python-tests.mdc
case_library/california_doublets/: event.yaml
case_library/chile_2010/: event.yaml
docs/: FUNVISIS_Analisis_Fuente_Datos.md  Fuentes_Globales_Datos_Sismicos_Acelerografia_Geofisica.md  H04_Hipotesis_Superposicion_Energia_Venezuela_2026.md  data-earthquake-analysis.txt  earthquake-venezuela-new-focus-Calculo.md  earthquake-venezuela-new-focus.md  foco-geologico.md  roapmap-v0_0_1.md  ui_features_and_theory.md  ui_field_dictionary.md  venezuela_2026_international_catalog_verification.json  venezuela_projection_2026-06-29.json  venezuela_projection_2026-06-30_events.csv
geological_model/: __init__.py  extractors.py  fcn_model.py  insar_bridge.py  insar_gnss_fetch.py  losses.py  models.py  paths.py  pipeline.py
layer_a/: config.py  formatting.py  models.py  paths.py  persistence.py  pipeline.py  ui.py
layer_b/: config.py  formatting.py  models.py  paths.py  persistence.py  pipeline.py  ui.py
layer_c/: __init__.py  config.py  paths.py  persistence.py  pipeline.py  ui.py
models/: geological_geospatial_fcn.yaml  insar_gnss_providers.yaml  recommended_models_phase5.yaml
schemas/: comparable_event.schema.json  event_case.schema.json
scripts/: comparative_charts.py  evaluate_all.py  evaluate_phase1.py  evaluate_phase2.py  evaluate_phase3.py  evaluate_phase4.py  evaluate_phase5.py  fetch_insar_gnss.py  international_calculation_workflow.py  layer_a_pipeline.py  layer_a_ui.py  layer_b_pipeline.py  layer_b_ui.py  layer_c_pipeline.py  layer_c_ui.py  persistence_store.py  project_venezuela_probabilities.py  projection_model.py  run_geological_model.py  run_international_estimation.py  validation.py  venezuela_projection_workflow.py  verify_venezuela_daily_effectiveness.py
tests/: test_geological_model.py  test_insar_gnss_fetch.py  test_international_calculation_workflow.py  test_layer_a.py  test_layer_b.py  test_layer_c.py  test_projection_model.py
(+252 files in other folders)
