[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake-analysis"
version = "0.1.0"
description = "Fases 1, 2 y 3 de analisis sismico con harness de agentes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pyyaml>=6.0"]
ui = [
  "gradio>=4.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "matplotlib>=3.8.0",
  "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.setuptools]
packages = []

