[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthquake-analysis"
version = "0.1.0"
description = "Fases 1-5 y Capas A/B de analisis sismico con harness de agentes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
layer_a = [
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
]
layer_b = [
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "scikit-learn>=1.3.0",
]
ui = [
  "gradio>=4.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.30.0",
  "matplotlib>=3.8.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["layer_a*", "layer_b*", "geological_model*"]

